--- a/src/component/home/index.less
+++ b/src/component/home/index.less
@@ -3,21 +3,83 @@
   background: #f0f0f0;
   overflow: hidden;
   .kong{
+    width: 100%;
     height: 0.57rem;
     background: #f0f0f0;
   }
   .ant-carousel{
     width: 100%;
+    height: 9rem;
+    .slick-slide {
+      width: 100%;
+      text-align: center;
+      height: 9rem;
+      overflow: hidden;
+      img{
+        display: block;
+        width: 100%;
+        height: 9.1rem;
+      }
+    }
   }
-  .ant-carousel .slick-slide {
+  .whyLearn{
     width: 100%;
-    text-align: center;
-    height: 5.5rem;
-    line-height: 5.5rem;
-    background: #788396;
-    overflow: hidden;
+    margin-top: 1.2rem;
+    .whyLearnHead{
+      width: 100%;
+      height: 0.72rem;
+      line-height: 0.72rem;
+      text-align: center;
+      h2{
+        display: inline-block;
+        font-size: 0.28rem;
+        font-weight: bold;
+        text-align: center;
+        height: 0.72rem;
+        line-height: 0.72rem;
+      }
+      .anticon anticon-deployment-unit{
+        font-size: 0.36rem;
+        margin: auto;
+        height: 0.72rem;
+      }
+    }
+    .whyLearnIntroduce{
+      width: 71%;
+      margin: 0.1rem auto 0;
+      font-size: 0.22rem;
+      color: @primary-color;
+    }
   }
-  .ant-carousel .slick-slide h3 {
-    color: #fff;
+  .whyLearnContent{
+    margin-top: 0.3rem;
+    height: 10rem;
+    .whylearnPicBox{
+      .whylearnPic1{
+        width: 4.8rem;
+        height: 3rem;
+        background: url(../../style/home/wy1.png) no-repeat;
+        background-size: contain;
+        background-size:100% 100%;
+      }
+      .whylearnPic2{
+        width: 4.8rem;
+        height: 3rem;
+        background: url(../../style/home/wy2.png) no-repeat;
+        background-size: contain;
+        background-size:100% 100%;
+      }
+      .whylearnPicText{
+        .text1{
+          color: @primary-color;
+          font-size: 0.2rem;
+          height: 0.2rem;
+        }
+        .text2{
+          color: @text-color;
+          font-size: 0.16rem;
+        }
+      }
+    }
   }
 }
