--- a/src/component/home/index.less
+++ b/src/component/home/index.less
@@ -37,6 +37,7 @@
         text-align: center;
         height: 0.72rem;
         line-height: 0.72rem;
+        color: @primary-color;
       }
       .anticon anticon-deployment-unit{
         font-size: 0.36rem;
@@ -53,31 +54,95 @@
   }
   .whyLearnContent{
     margin-top: 0.3rem;
-    height: 10rem;
     .whylearnPicBox{
+      margin-top: 0.3rem;
+      transition: transform .35s ease,box-shadow .35s ease;
       .whylearnPic1{
         width: 4.8rem;
         height: 3rem;
+        margin: 0 auto;
         background: url(../../style/home/wy1.png) no-repeat;
         background-size: contain;
         background-size:100% 100%;
+        border-radius: 0.04rem;
+        border-color: #d9d9d9;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+        transition: transform .35s ease,box-shadow .35s ease;
+        &:hover{
+          box-shadow: 0 8px 24px 0 rgba(0,0,0,.16);
+          transform: translateY(-.1rem);
+        }
       }
       .whylearnPic2{
         width: 4.8rem;
         height: 3rem;
+        margin: 0 auto;
+        background: url(../../style/home/wy3.png) no-repeat;
+        background-size: contain;
+        background-size:100% 100%;
+        border-radius: 0.04rem;
+        border-color: #d9d9d9;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+        transition: transform .35s ease,box-shadow .35s ease;
+        &:hover{
+          box-shadow: 0 8px 24px 0 rgba(0,0,0,.16);
+          transform: translateY(-.1rem);
+        }
+      }
+      .whylearnPic3{
+        width: 4.8rem;
+        height: 3rem;
+        margin: 0 auto;
+        background: url(../../style/home/wy4.png) no-repeat;
+        background-size: contain;
+        background-size:100% 100%;
+        border-radius: 0.04rem;
+        border-color: #d9d9d9;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+        transition: transform .35s ease,box-shadow .35s ease;
+        &:hover{
+          box-shadow: 0 8px 24px 0 rgba(0,0,0,.16);
+          transform: translateY(-.1rem);
+        }
+      }
+      .whylearnPic4{
+        width: 4.8rem;
+        height: 3rem;
+        margin: 0 auto;
         background: url(../../style/home/wy2.png) no-repeat;
         background-size: contain;
         background-size:100% 100%;
+        border-radius: 0.04rem;
+        border-color: #d9d9d9;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+        transition: transform .35s ease,box-shadow .35s ease;
+        &:hover{
+          box-shadow: 0 8px 24px 0 rgba(0,0,0,.16);
+          transform: translateY(-.1rem);
+        }
       }
       .whylearnPicText{
         .text1{
           color: @primary-color;
           font-size: 0.2rem;
           height: 0.2rem;
+          text-align: center;
         }
         .text2{
           color: @text-color;
           font-size: 0.16rem;
+          text-align: center;
+        }
+        .text3{
+          color: @text-color;
+          font-size: 0.16rem;
+          text-align: left;
+        }
+        .text4{
+          padding: 0 0.6rem;
+          color: @text-color;
+          font-size: 0.16rem;
+          text-align: center;
         }
       }
     }
