--- a/src/component/teacher/index.less
+++ b/src/component/teacher/index.less
@@ -48,6 +48,7 @@
   .teacherIntroduce2{
     position: relative;
     background: white;
+    padding-bottom: 0.5rem;
     .headText{
       margin: 0.4rem auto 0.3rem;
       color: #1f1d1d;
@@ -65,6 +66,8 @@
   }
   .teacherInformationBox{
     background: #fa8c16;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
     .teacherSBox{
       margin: 0.5rem auto;
       padding: 0.5rem 0.3rem;
@@ -108,7 +111,7 @@
         .information{
           color: black;
           line-height: 1.5;
-          font-size: 0.16rem;
+          font-size: 0.18rem;
         }
       }
       &:hover{
