--- a/src/component/home/index.less
+++ b/src/component/home/index.less
@@ -7,18 +7,37 @@
     height: 0.57rem;
     background: #f0f0f0;
   }
-  .ant-carousel{
-    width: 100%;
-    height: 9rem;
-    .slick-slide {
+  .PC{
+    .ant-carousel{
       width: 100%;
-      text-align: center;
       height: 9rem;
-      overflow: hidden;
-      img{
-        display: block;
+      .slick-slide {
         width: 100%;
-        height: 9.1rem;
+        text-align: center;
+        height: 9rem;
+        overflow: hidden;
+        img{
+          display: block;
+          width: 100%;
+          height: 9.1rem;
+        }
+      }
+    }
+  }
+  .mobile{
+    .ant-carousel{
+      width: 100%;
+      height: 4rem;
+      .slick-slide {
+        width: 100%;
+        text-align: center;
+        height: 4rem;
+        overflow: hidden;
+        img{
+          display: block;
+          width: 100%;
+          height: 4.1rem;
+        }
       }
     }
   }
